fixed subhead size on mobile

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1073,7 +1073,7 @@ footer {
         }
 
         h2 {
-            font-size: 2em;
+            font-size: 1.5em;
         }
 
         a {
